src/Common Files/frames.h

     int FRAMES_API scfGetRunInfo(int Idx, char *info);
     int FRAMES_API scfGetSetInfo(int dsIdx, char *name, char *type);
     int FRAMES_API scfGetContamName(int dsIdx, int conIdx, int progIdx, char *name, char *cas);
     int FRAMES_API scfGetSeriesProperties(int dsIdx, int conIdx, int progIdx, char *vUnits, char *tUnits);
     int FRAMES_API affGetRunInfo(int Idx, char *info);
     int FRAMES_API affGetSetInfo(int dsIdx, char *name, char *type);
     int FRAMES_API affGetFluxType(int dsIdx, int fluxIdx, char *type, double *size, char *sunt, double *density, char *dunt);
     int FRAMES_API affGetContamName(int dsIdx, int conIdx, int progIdx, char *name, char *cas);
     int FRAMES_API affGetSeriesProperties(int dsIdx, int conIdx, int progIdx, char *vUnits, char *tUnits);
     int FRAMES_API wffGetRunInfo(int Idx, char *info);
     int FRAMES_API wffGetSetInfo(int dsIdx, char *name, char *type);
     int FRAMES_API wffGetContamName(int dsIdx, int conIdx, int progIdx, char *name, char *cas);
     int FRAMES_API wffGetSeriesProperties(int dsIdx, int conIdx, int progIdx, char *vUnits, char *tUnits);
     int FRAMES_API wcfGetRunInfo(int Idx, char *info);
     int FRAMES_API wcfGetSetInfo(int dsIdx, char *name, char *type);
  double FRAMES_API rifGetTime(int dsIdx, int ageIdx, char *parentCAS, int timeIdx);
     int FRAMES_API rifGetAgeGroup(int dsIdx, int ageIdx, double *min, double *max);
     int FRAMES_API rifLoadRoutesAndPathwaysByTime(int dsIdx, int ageIdx, char *cas, char *parentCAS, int timeIdx);
    void FRAMES_API rifGetRouteAndPathway(int dsIdx, int expIdx, char *path, char *route, char *measure, char *unit);
     int FRAMES_API rifLoadTimeSeries(int dsIdx, int locIdx, int ageIdx, char *cas, char *parentCAS, char *path, char *route, char *measure, char *unit);
    void FRAMES_API rifGetTimeSeries(int dsIdx, double *stime, double *svalue);
    void FRAMES_API rifGetTimeAndValue(int dsIdx, int timeIdx, double *stime, double *svalue);
  double FRAMES_API rifGetDuration(int dsIdx);
  double FRAMES_API rifGetPopulation(int dsIdx);
//HIFClass.cpp
    bool FRAMES_API hifChecksum();
     int FRAMES_API hifOpen(char *fuiname, char *modId);
    void FRAMES_API hifClose();
     int FRAMES_API hifGetNumRunInfo();
     int FRAMES_API hifGetRunInfo(int Idx, char *info);
     int FRAMES_API hifGetSetInfo(int dsIdx, int *numLoc, int *numAge, int *numCancerOrg, int *numDoseOrg, char *typ, char *med, char *exp);
     int FRAMES_API hifGetExposurePoint(int dsIdx, int locIdx, double *xp, double *yp);
     int FRAMES_API hifGetTimeCount(int dsIdx, int ageIdx, char *parentCAS);
  double FRAMES_API hifGetTime(int dsIdx, int ageIdx, char *parentCAS, int timeIdx);
     int FRAMES_API hifGetAgeGroup(int dsIdx, int ageIdx, double *min, double *max);
    void FRAMES_API hifGetCancerOrgan(int dsIdx, int orgIdx, char *cstr);
    void FRAMES_API hifGetDoseOrgan(int dsIdx, int orgIdx, char *cstr);
     int FRAMES_API hifLoadRoutesAndPathwaysByTime(int dsIdx, int ageIdx, char *cas, char *parentCAS, int timeIdx);
    void FRAMES_API hifGetRouteAndPathway(int dsIdx, int expIdx, char *path, char *route, char *measure, char *unit);
     int FRAMES_API hifLoadTimeSeries(int dsIdx, int locIdx, int ageIdx, int orgIdx, char *cas, char *parentCAS, char *path, char *route, char *measure, char *unit);
    void FRAMES_API hifGetTimeSeries(int dsIdx, double *stime, double *svalue);
    void FRAMES_API hifGetTimeAndValue(int dsIdx, int timeIdx, double *stime, double *svalue);
  double FRAMES_API hifGetDuration(int dsIdx);
  double FRAMES_API hifGetPopulation(int dsIdx);
    void FRAMES_API hifAggregate(char *filename, char *casList);
// EXFClass.cpp
    void FRAMES_API exfOpen(char *fuiname, char *modId);
    void FRAMES_API exfClose();
     int FRAMES_API exfGetNumRunInfo();
     int FRAMES_API exfGetRunInfo(int Idx, char *info);
     int FRAMES_API exfGetNumSets();
     int FRAMES_API exfGetSetInfo(int dsIdx, char *name, char *type);
     int FRAMES_API exfGetNumLocation(int dsIdx);
     int FRAMES_API exfGetLocationName(int dsIdx, int locIdx, char *name, char *id);
     int FRAMES_API exfGetNumOrganism(int dsIdx);
     int FRAMES_API exfGetOrganismName(int dsIdx, int orgIdx, char *name, char *id);
     int FRAMES_API exfGetNumContam(int dsIdx, int orgIdx);
     int FRAMES_API exfGetContamName(int dsIdx, int orgIdx, int conIdx, char *name, char *cas);
     int FRAMES_API exfGetNumEffects(int dsIdx, int orgIdx, int conIdx);
     int FRAMES_API exfGetSeriesProperties(int dsIdx, int orgIdx, int conIdx, int efxIdx, char *efxDes, char *efxunits, char *timeunits);
     int FRAMES_API exfGetSeriesValues(int dsIdx, int orgIdx, int conIdx, int efxIdx, int count, double *times, double *values);