Common Files/Frames.bas

Public Declare Function rifGetTime Lib "Frames" (ByVal dsIdx As Long, ByVal ageIdx As Long, ByVal parentCAS As String, ByVal timeIdx As Long) As Double
Public Declare Function rifGetAgeGroup Lib "Frames" (ByVal dsIdx As Long, ByVal ageIdx As Long, ByRef min As Double, ByRef max As Double) As Long
Public Declare Function rifLoadRoutesAndPathwaysByTime Lib "Frames" (ByVal dsIdx As Long, ByVal ageIdx As Long, ByVal casid As String, ByVal parentCAS As String, ByVal timeIdx As Long) As Long
Public Declare Sub rifGetRouteAndPathway Lib "Frames" (ByVal dsIdx As Long, ByVal expIdx As Long, ByVal Path As String, ByVal Route As String, ByVal measure As String, ByVal unit As String)
Public Declare Function rifLoadTimeSeries Lib "Frames" (ByVal dsIdx As Long, ByVal locIdx As Long, ByVal ageIdx As Long, ByVal casid As String, ByVal parentCAS As String, ByVal Path As String, ByVal Route As String, ByVal measure As String, ByVal unit As String) As Long
'rifloadtimeseries must be called before using the following functions
Public Declare Sub rifGetTimeSeries Lib "Frames" (ByVal dsIdx As Long, ByRef times As Double, ByRef values As Double)
Public Declare Sub rifGetTimeAndValue Lib "Frames" (ByVal dsIdx As Long, ByVal timeIdx As Long, ByRef times As Double, ByRef values As Double)
Public Declare Function rifGetDuration Lib "Frames" (ByVal dsIdx As Long) As Double
Public Declare Function rifGetPopulation Lib "Frames" (ByVal dsIdx As Long) As Double
'//--------------------------------------------------------------------------------------
'//----------- HIF calls ------------------------------------
'//--------------------------------------------------------------------------------------
Public Declare Function hifChecksum Lib "Frames" () As Boolean
Public Declare Function hifOpen Lib "Frames" (ByVal FUIName As String, ByVal Source As String) As Long
'hifreaddatasets must be called before using the following functions
Public Declare Sub hifClose Lib "Frames" ()
Public Declare Sub hifAggregate Lib "Frames" (ByVal filename As String, ByVal casList As String)
Public Declare Function hifGetNumRunInfo Lib "Frames" () As Long
Public Declare Function hifGetRunInfo Lib "Frames" (ByVal Idx As Long, ByVal info As String) As Long
Public Declare Function hifGetSetInfo Lib "Frames" (ByVal dsIdx As Long, ByRef numLoc As Long, ByRef numAge As Long, ByRef numOrgC As Long, ByRef numOrgD As Long, ByVal typ As String, ByVal med As String, ByVal exp As String) As Long
Public Declare Function hifGetExposurePoint Lib "Frames" (ByVal dsIdx As Long, ByVal locIdx As Long, ByRef xp As Double, ByRef yp As Double) As Long
Public Declare Function hifGetTimeCount Lib "Frames" (ByVal dsIdx As Long, ByVal ageIdx As Long, ByVal parentCAS As String) As Long
Public Declare Function hifGetTime Lib "Frames" (ByVal dsIdx As Long, ByVal ageIdx As Long, ByVal parentCAS As String, ByVal timeIdx As Long) As Double
Public Declare Function hifGetAgeGroup Lib "Frames" (ByVal dsIdx As Long, ByVal ageIdx As Long, ByRef min As Double, ByRef max As Double) As Long
Public Declare Sub hifGetCancerOrgan Lib "Frames" (ByVal dsIdx As Long, ByVal orgIdx As Long, ByVal lpStrings As String)
Public Declare Sub hifGetDoseOrgan Lib "Frames" (ByVal dsIdx As Long, ByVal orgIdx As Long, ByVal lpStrings As String)
Public Declare Function hifLoadRoutesAndPathwaysByTime Lib "Frames" (ByVal dsIdx As Long, ByVal ageIdx As Long, ByVal casid As String, ByVal parentCAS As String, ByVal timeIdx As Long) As Long
Public Declare Sub hifGetRouteAndPathway Lib "Frames" (ByVal dsIdx As Long, ByVal expIdx As Long, ByVal Path As String, ByVal Route As String, ByVal measure As String, ByVal unit As String)
Public Declare Function hifLoadTimeSeries Lib "Frames" (ByVal dsIdx As Long, ByVal locIdx As Long, ByVal ageIdx As Long, ByVal orgIdx As Long, ByVal cas As String, ByVal parentCAS As String, ByVal Path As String, ByVal Route As String, ByVal measure As String, ByVal unit As String) As Long
'hifloadtimeseries must be called before using the following functions
Public Declare Sub hifGetTimeSeries Lib "Frames" (ByVal dsIdx As Long, ByRef times As Double, ByRef values As Double)
Public Declare Sub hifGetTimeAndValue Lib "Frames" (ByVal dsIdx As Long, ByVal timeIdx As Long, ByRef times As Double, ByRef values As Double)
Public Declare Function hifGetDuration Lib "Frames" (ByVal dsIdx As Long) As Double
Public Declare Function hifGetPopulation Lib "Frames" (ByVal dsIdx As Long) As Double
'//--------------------------------------------------------------------------------------
'//----------- EXF calls ------------------------------------
'//--------------------------------------------------------------------------------------
Public Declare Sub exfOpen Lib "Frames" (ByVal FUIName As String, ByVal modId As String)
Public Declare Sub exfClose Lib "Frames" ()
Public Declare Function exfGetNumRunInfo Lib "Frames" () As Long
Public Declare Function exfGetNumSets Lib "Frames" () As Long
Public Declare Function exfGetNumLocation Lib "Frames" (ByVal dsIdx As Long) As Long
Public Declare Function exfGetNumOrganism Lib "Frames" (ByVal dsIdx As Long) As Long
Public Declare Function exfGetNumContam Lib "Frames" (ByVal dsIdx As Long, ByVal orgIdx As Long) As Long
Public Declare Function exfGetNumEffects Lib "Frames" (ByVal dsIdx As Long, ByVal orgIdx As Long, ByVal conIdx As Long) As Long
Public Declare Function exfGetSeriesValues Lib "Frames" (ByVal dsIdx As Long, ByVal orgIdx As Long, ByVal conIdx As Long, ByVal efxIdx As Long, ByVal count As Long, ByRef times As Double, ByRef values As Double) As Long
Public Declare Function DLLexfGetRunInfo Lib "Frames" Alias "exfGetRunInfo" (ByVal Idx As Long, ByVal info As String) As Long
Public Declare Function DLLexfGetSetInfo Lib "Frames" Alias "exfGetSetInfo" (ByVal dsIdx As Long, ByVal dsname As String, ByVal dstype As String) As Long
Public Declare Function DLLexfGetLocationName Lib "Frames" Alias "exfGetLocationName" (ByVal dsIdx As Long, ByVal locIdx As Long, ByVal name As String, ByVal id As String) As Long
Public Declare Function DLLexfGetOrganismName Lib "Frames" Alias "exfGetOrganismName" (ByVal dsIdx As Long, ByVal orgIdx As Long, ByVal name As String, ByVal id As String) As Long
Public Declare Function DLLexfGetContamName Lib "Frames" Alias "exfGetContamName" (ByVal dsIdx As Long, ByVal orgIdx As Long, ByVal conIdx As Long, ByVal name As String, ByVal cas As String) As Long
Public Declare Function DLLexfGetSeriesProperties Lib "Frames" Alias "exfGetSeriesProperties" (ByVal dsIdx As Long, ByVal orgIdx As Long, ByVal conIdx As Long, ByVal efxIdx As Long, ByVal efxDes As String, ByVal efxunits As String, ByVal timeunits As String) As Long

Public Function scfGetRunInfo(ByVal dsIdx As Long, ByRef info As String) As Long
  retString = Space(MAXFIELD)
  retString1 = Space(MAXFIELD)
  scfGetRunInfo = DLLscfGetRunInfo(dsIdx, retString)
  info = StripTerminator(retString)
End Function

Public Function scfGetSetInfo(ByVal dsIdx As Long, ByRef dsname As String, ByRef dstype As String) As Long
  retString = Space(MAXFIELD)
  retString1 = Space(MAXFIELD)
  scfGetSetInfo = DLLscfGetSetInfo(dsIdx, retString, retString1)
  dsname = StripTerminator(retString)
  dstype = StripTerminator(retString1)
End Function

Public Function scfGetContamName(ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByRef name As String, ByRef cas As String) As Long
  retString = Space(MAXFIELD)
  retString1 = Space(MAXFIELD)
  scfGetContamName = DLLscfGetContamName(dsIdx, conIdx, progIdx, retString, retString1)
  name = StripTerminator(retString)
  cas = StripTerminator(retString1)
End Function

Public Function scfGetSeriesProperties(ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByRef units As String, ByRef timeunits As String) As Long
  retString = Space(MAXFIELD)
  retString1 = Space(MAXFIELD)
  scfGetSeriesProperties = DLLscfGetSeriesProperties(dsIdx, conIdx, progIdx, retString, retString1)
  units = StripTerminator(retString)
  timeunits = StripTerminator(retString1)
End Function

Public Function affGetRunInfo(ByVal dsIdx As Long, ByRef info As String) As Long
  retString = Space(MAXFIELD)
  retString1 = Space(MAXFIELD)
  affGetRunInfo = DLLaffGetRunInfo(dsIdx, retString)
  info = StripTerminator(retString)
End Function

Public Function affGetSetInfo(ByVal dsIdx As Long, ByRef dsname As String, ByRef dstype As String) As Long
  retString = Space(MAXFIELD)
  retString1 = Space(MAXFIELD)
  affGetSetInfo = DLLaffGetSetInfo(dsIdx, retString, retString1)
  dsname = StripTerminator(retString)
  dstype = StripTerminator(retString1)
End Function

Public Function affGetFluxType(ByVal dsIdx As Long, ByVal nFlux As Long, ByRef name As String, ByRef size As Double, ByRef suom As String, ByRef density As Double, ByRef duom As String) As Long
  retString = Space(MAXFIELD)
  retString1 = Space(MAXFIELD)
  retString2 = Space(MAXFIELD)
  affGetFluxType = DLLaffGetFluxType(dsIdx, nFlux, retString, size, retString1, density, retString2)
  name = StripTerminator(retString)
  suom = StripTerminator(retString1)
  duom = StripTerminator(retString2)
End Function

Public Function affGetContamName(ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByRef name As String, ByRef cas As String) As Long
  retString = Space(MAXFIELD)
  retString1 = Space(MAXFIELD)
  affGetContamName = DLLaffGetContamName(dsIdx, conIdx, progIdx, retString, retString1)
  name = StripTerminator(retString)
  cas = StripTerminator(retString1)
End Function

Public Function affGetSeriesProperties(ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByRef units As String, ByRef timeunits As String) As Long
  retString = Space(MAXFIELD)
  retString1 = Space(MAXFIELD)
  affGetSeriesProperties = DLLaffGetSeriesProperties(dsIdx, conIdx, progIdx, retString, retString1)
  units = StripTerminator(retString)
  timeunits = StripTerminator(retString1)
End Function

Public Function wffGetRunInfo(ByVal dsIdx As Long, ByRef info As String) As Long
  retString = Space(MAXFIELD)
  retString1 = Space(MAXFIELD)
  wffGetRunInfo = DLLwffGetRunInfo(dsIdx, retString)
  info = StripTerminator(retString)
End Function

Public Function wffGetSetInfo(ByVal dsIdx As Long, ByRef dsname As String, ByRef dstype As String) As Long
  retString = Space(MAXFIELD)
  retString1 = Space(MAXFIELD)
  wffGetSetInfo = DLLwffGetSetInfo(dsIdx, retString, retString1)
  dsname = StripTerminator(retString)
  dstype = StripTerminator(retString1)
End Function

Public Function wffGetContamName(ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByRef name As String, ByRef cas As String) As Long
  name = Space(MAXFIELD)
  cas = Space(MAXFIELD)
  wffGetContamName = DLLwffGetContamName(dsIdx, conIdx, progIdx, name, cas)
  name = StripTerminator(name)
  cas = StripTerminator(cas)
End Function

Public Function wffGetSeriesProperties(ByVal dsIdx As Long, ByVal conIdx As Long, ByVal progIdx As Long, ByRef units As String, ByRef timeunits As String) As Long
  units = Space(MAXFIELD)
  timeunits = Space(MAXFIELD)
  wffGetSeriesProperties = DLLwffGetSeriesProperties(dsIdx, conIdx, progIdx, units, timeunits)
  units = StripTerminator(units)
  timeunits = StripTerminator(timeunits)
End Function

Public Function wcfGetRunInfo(ByVal dsIdx As Long, ByRef info As String) As Long
  retString = Space(MAXFIELD)
  retString1 = Space(MAXFIELD)
  wcfGetRunInfo = DLLwcfGetRunInfo(dsIdx, retString)
  info = StripTerminator(retString)
End Function

Public Function wcfGetSetInfo(ByVal dsIdx As Long, ByRef dsname As String, ByRef dstype As String) As Long
  retString = Space(MAXFIELD)
  retString1 = Space(MAXFIELD)
  wcfGetSetInfo = DLLwcfGetSetInfo(dsIdx, retString, retString1)
  dsname = StripTerminator(retString)
  dstype = StripTerminator(retString1)
End Function
